--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+cs.ascii_art: single direction box characters
 ffmpegutils: run the ffmpeg remotely from local files
 cs.pfx: open() func returning context manager which does a filename pfx?
 PR for pyicontract-lint to use pyproject.toml?
